syntax = "proto3";

message PatientCase {
  string id = 1;
  int32 ageYears = 2;
  int32 ageDays = 3;
  uint32 birthDate = 4;
  uint32 admDate = 5;
  uint32 sepDate = 6;
  int32 leaveDays = 7;
  string sex = 8;
  string adm = 9;
  string sep = 10;
  int32 gestage = 11;
  int32 los = 12;
  int32 hmv = 13;
  bool bh = 14;
}

message Result {
  string drg = 1;
  string mdc = 2;
  uint32 pccl = 3;
  uint32 gst = 4;
}
